# sopel-nobleme

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
sopel_modules/nobleme/: __init__.py
sopel_nobleme/: __init__.py  plugin.py
