[metadata]
name = sopel-nobleme
version = 0.1.0
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/Exirel/sopel-nobleme
description = A Sopel plugin for the Nobleme.com silly community 
long_description = file: README.md
license = MPL-2.0
keywords = nobleme
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
namespace_packages = sopel_modules

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    requests
    sopel>=6.6.8

[options.entry_points]
sopel.plugins = 
    nobleme = sopel_nobleme

[flake8]
max-line-length = 79
exclude = docs/*,tests/*,sopel_modules/*

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = sopel_nobleme, tests
multi_line_output = 3
not_skip = __init__.py
line_length = 79
